test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_parse/plx1_storage_without_type.plx
pub var = 0

pub fn main(none) i32 {
    return var
}
